Made some changes in the details

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>INSTANT - Bootstrap Theme</title>
+    <title>Ashish Jaiswal</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">INSTANT</a>
+          <a class="navbar-brand" href="index.html">ASHISH</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -64,10 +64,10 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>PAUL SILVA</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-				<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+				<h2>ASHISH JAISWAL</h2>
+				<p>I am yet to finish writing about me. Come back later for the details.</p>
+				<p>My career is under maintenance and I will be doing things to write on this blog.</p>
+				<p>For now, lets just look at the design and the fact that this is just a static website.</p>
 			</div>
 
 		</div><! --/row -->
@@ -103,14 +103,14 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+					<p><b>ELECTRONICS ENGINEER, DEVELOPER & CRICKETER</b></p>
 				</div>
 			
 				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
+					<p>Living in the amazing Kathmandu.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>hello@instant.com</p>
+					<p>ashiz2013@gmail.com</p>
 				</div>
 			
 			</div>
