--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>INSTANT - Bootstrap Theme</title>
+    <title>Ashish Jaiswal - Portfolio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">INSTANT</a>
+          <a class="navbar-brand" href="index.html">Ashish</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -57,8 +57,8 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>PAUL SILVA</h1>
-					<h4>WEB DESIGNER, DEVELOPER & GAME ADDICT</h4>
+					<h1>ASHISH JAISWAL</h1>
+					<h4>ELECTRONICS ENGINEER, DEVELOPER & CRICKETER</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
@@ -120,14 +120,14 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+					<p><b>ELECTRONICS ENGINEER, DEVELOPER & CRICKETER</b></p>
 				</div>
 			
 				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
+					<p>Living in the amazing Kathmandu.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>hello@instant.com</p>
+					<p>ashiz2013@gmail.com</p>
 				</div>
 			</div>
 		</div>
