Added urls to all the pages

--- a/work.html
+++ b/work.html
@@ -87,16 +87,16 @@
 					<a href="#"><i class="fa fa-dribbble"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
+					<a href="https://facebook.com/asheeshcric" target="_blank"><i class="fa fa-facebook"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="https://twitter.com/ashiz2013" target="_blank"><i class="fa fa-twitter"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="https://www.linkedin.com/in/ashish-jaiswal-b79aaa93/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BRe3lYljUQDy1vsL7DS%2FC8A%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-nav.settings_view_profile" target="_blank"><i class="fa fa-linkedin"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-instagram"></i></a>
+					<a href="https://www.instagram.com/cool_asheesh/" target="_blank"><i class="fa fa-instagram"></i></a>
 				</div>
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-tumblr"></i></a>
