Recovered my original portfolio

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Ashish Jaiswal - Portfolio</title>
+    <title>Ashish Jaiswal</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,54 +39,37 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Ashish</a>
+          <a class="navbar-brand" href="index.html">ASHISH</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about.html">About</a></li>
+            <li><a href="index.html#works">Works</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
 
-	<div id="headerwrap">
+	<div id="aboutwrap">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>ASHISH JAISWAL</h1>
-					<h4>ELECTRONICS ENGINEER, DEVELOPER & CRICKETER</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><! --/aboutwrap -->
 	
-	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Portfolio</h1>
-			
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
+			<div class="col-lg-8 col-lg-offset-2">
+				<h2>ASHISH JAISWAL</h2>
+				<p>I am yet to finish writing about me. Come back later for the details.</p>
+				<p>My career is under maintenance and I will be doing things to write on this blog.</p>
+				<p>For now, lets just look at the design and the fact that this is just a static website.</p>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
-			</div>
+
 		</div><! --/row -->
 	</div><! --/container -->
 	
@@ -97,16 +80,16 @@
 					<a href="#"><i class="fa fa-dribbble"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="https://facebook.com/asheeshcric" target="_blank"><i class="fa fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-facebook"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="https://twitter.com/ashiz2013" target="_blank"><i class="fa fa-twitter"></i></a>
+					<a href="#"><i class="fa fa-twitter"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="https://www.linkedin.com/in/ashish-jaiswal-b79aaa93/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BRe3lYljUQDy1vsL7DS%2FC8A%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-nav.settings_view_profile" target="_blank"><i class="fa fa-linkedin"></i></a>
+					<a href="#"><i class="fa fa-linkedin"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="https://www.instagram.com/cool_asheesh/" target="_blank"><i class="fa fa-instagram"></i></a>
+					<a href="#"><i class="fa fa-instagram"></i></a>
 				</div>
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-tumblr"></i></a>
@@ -129,7 +112,9 @@
 				<div class="col-lg-4">
 					<p>ashiz2013@gmail.com</p>
 				</div>
+			
 			</div>
+		
 		</div>
 	</div><! --/footerwrap -->
 	
