--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Ashish Jaiswal - Portfolio</title>
 
     <!-- Favicons for the page -->
-    <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
+    <!-- <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-icon-76x76.png">
@@ -27,7 +27,10 @@
     <link rel="manifest" href="img/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#ffffff"> -->
+
+    <!-- !-->
+    <link rel="icon" href="img/favicons/favicon.ico">
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -90,10 +93,10 @@
           <div class="subheading mb-5">Chabahil · Kathmandu, NP · (986) 004-3739 ·
             <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
           </div>
-          <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="mb-5">I am a college senior in Electronics & Communication Engineering at Kathmandu Engineering College and will be graduating in October 2018. I work as a Machine Learning Engineer Trainee at Insight Workshop, Kamalpokhari, Kathmandu. I am also the current secretary of the Robotics Club, Kathmandu Engineering College.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="https://facebook.com/asheeshcric">
+              <a href="https://facebook.com/asheeshcric" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -101,7 +104,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://twitter.com/ashiz2013" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -109,7 +112,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/ashish-jaiswal-b79aaa93/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -117,7 +120,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://github.com/asheeshcric" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -134,38 +137,38 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Machine Learning Engineer Trainee</h3>
+              <div class="subheading mb-3">Insight Workshop</div>
+              <p>Currently working as a Machine Learning Engineer Trainee for solving data-related problems that arise in different web based applications using Django and Python.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">December 2017 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Secretary at Robotics Club</h3>
+              <div class="subheading mb-3">Kathmandu Engineering College</div>
+              <p>Working as an acting secretary in the Robotics Club of Kathmandu Engineering College. Have been involved in various robotics and embedded system projects and participated in multiple national and international robotics competitions such as Yantra, Robocon.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
+              <span class="text-primary">June 2015 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+              <h3 class="mb-0">Innovator</h3>
+              <div class="subheading mb-3">National Innovation Center</div>
+              <p>Working as an Innovator for National Innovation Center led by Mr. Mahabir Pun. Been involved in the "Medical Drone" project for the enhancement of tele-medicine in Nepal. Occasionally work on the research for the software required in the automation for the drone.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">October 2016 - Present</span>
             </div>
           </div>
 
-          <div class="resume-item d-flex flex-column flex-md-row">
+          <!-- <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Design Intern</h3>
               <div class="subheading mb-3">Shout! Media Productions</div>
@@ -174,7 +177,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2008 - June 2010</span>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -186,24 +189,24 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Kathmandu Engineering College</h3>
+              <div class="subheading mb-3">Bachelor of Electronics & Communication Engineering</div>
+              <div>Embedded Systems, Robotics and Computer Science</div>
+              <p>Graduating in October 2018</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">November 2014 - October 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Pentagon International College (High School)</h3>
+              <div class="subheading mb-3">Physical Science</div>
+              <p>SCORE: 78.5%</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">July 2011 - May 2013</span>
             </div>
           </div>
 
@@ -217,10 +220,19 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
+              <i class="devicons devicons-python"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
+              <i class="devicons devicons-django"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-git"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-bitbucket"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-mysql"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-javascript"></i>
@@ -229,25 +241,22 @@
               <i class="devicons devicons-jquery"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
+              <i class="devicons devicons-html5"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
+              <i class="devicons devicons-css3"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
+              <i class="devicons devicons-linux"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
+              <i class="devicons devicons-nginx"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
+              <i class="devicons devicons-angular"></i>
             </li>
           </ul>
 
@@ -255,16 +264,16 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Data Science with Python</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Web Development with Django</li>
+            <li>
+           	  <i class="fa-li fa fa-check"></i>
+              UI/UX Design</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Nginx Server Setup</li>
           </ul>
         </div>
       </section>
@@ -272,8 +281,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>Apart from being a machine learning enthusiast and a web developer, I enjoy most of my time in cricket. Whenever I get any chance to play indoor or outdoor cricket, I rush myself to it. I have also been an U-16 player for Kathmandu during my school days. I have participated in inter-college cricket competitions from KEC too.</p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and thriller genre movies and television shows. I spend a large amount of my free time exploring the latest technolgy advancements in the artificial intelligence and machine learning world.</p>
         </div>
       </section>
 
@@ -283,31 +292,28 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              Fusemachines AI Fellowship - Columbia Micromasters - Artificial Intelligence - 2018</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              Tech Diversity Scholarship - Web Development with Python</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
+              Runnerup - Krishakcopter (Yantra) - International Drone Competition 2016</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
+              Runnerup - Robodrift 3.0 - Kathmandu Engineering College 2015</li>
+            <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              SemiFinalists - Manual Akhada - Yantra 2015</li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Regular (Full) Scholarship - Bachelors in Electronics & Communication Engineering - 2014 </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Partial Scholarship - Physical Science in High School - 2011 </li>
           </ul>
         </div>
       </section>
