[ADD] Robocon achievement to the portfolio

--- a/index.html
+++ b/index.html
@@ -290,9 +290,13 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
+          	<li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              Best Engineering Award - IOE Robocon 2018</li>
+            <li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Fusemachines AI Fellowship - Columbia Micromasters - Artificial Intelligence - 2018</li>
+              Fusemachines AI Fellowship - Columbia Micromasters Program 2018 - Artificial Intelligence</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Tech Diversity Scholarship - Web Development with Python</li>
