--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/ashish-jaiswal-b79aaa93/" target="_blank">
+              <a href="https://www.linkedin.com/in/asheeshcric/" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
