[UPDATE] The title of the index page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Ashish Jaiswal - Portfolio</title>
+    <title>Ashish Jaiswal</title>
 
     <!-- Favicons for the page -->
     <!-- <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-icon-57x57.png">
