[UPDATE] Add Junior Software Engineer as experience in the portfolio

--- a/index.html
+++ b/index.html
@@ -137,12 +137,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Machine Learning Engineer Trainee</h3>
+              <h3 class="mb-0">Junior Software Engineer</h3>
               <div class="subheading mb-3">Insight Workshop</div>
-              <p>Currently working as a Machine Learning Engineer Trainee for solving data-related problems that arise in different web based applications using Django and Python.</p>
+              <p>Currently working as a full time Junior Software Engineer and a web developer in Django and Angular under AWS cloud services.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2017 - Present</span>
+              <span class="text-primary">April 2018 - Present</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Machine Learning Engineer Trainee</h3>
+              <div class="subheading mb-3">Insight Workshop</div>
+              <p>Worked as a Machine Learning Engineer Trainee for solving data-related problems that arise in different web based applications using Django and Python.</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">December 2017 - April 2018</span>
             </div>
           </div>
 
@@ -164,7 +175,7 @@
               <p>Working as an Innovator for National Innovation Center led by Mr. Mahabir Pun. Been involved in the "Medical Drone" project for the enhancement of tele-medicine in Nepal. Occasionally work on the research for the software required in the automation for the drone.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">October 2016 - Present</span>
+              <span class="text-primary">October 2016 - September 2017</span>
             </div>
           </div>
 
