[ADD] Additional skills to the list

--- a/index.html
+++ b/index.html
@@ -278,7 +278,13 @@
               Data Science with Python</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Web Development with Django</li>
+              Web Development with Django, Angular and Django REST Framework</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Artificial Intelligence and Machine Learning Concepts</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              Robotics and Embedded Systems</li>
             <li>
            	  <i class="fa-li fa fa-check"></i>
               UI/UX Design</li>
