[UPDATE] Make some changes to the portfolio blog

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="subheading mb-5">Chabahil · Kathmandu, NP · (986) 004-3739 ·
             <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
           </div>
-          <p class="mb-5">I am a college senior in Electronics & Communication Engineering at Kathmandu Engineering College and will be graduating in October 2018. I work as a Software Engineer at Insight Workshop, Kamalpokhari, Kathmandu. I am also the current acting secretary of Robotics Club, Kathmandu Engineering College.</p>
+          <p class="mb-5">I am a college senior in Electronics & Communication Engineering at Kathmandu Engineering College and will be graduating in October 2018. I work as a Software Engineer at Insight Workshop, Kamalpokhari, Kathmandu. I am also the acting secretary of Robotics Club, Kathmandu Engineering College.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://facebook.com/asheeshcric" target="_blank">
@@ -137,9 +137,14 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Software Engineer</h3>
+              <h3 class="mb-0">Software Engineer</h3>
               <div class="subheading mb-3">Insight Workshop</div>
-              <p>Currently working as a full time Junior Software Engineer and a web developer in Django and Angular under AWS cloud services.</p>
+              <ul>
+                <li>Currently working as a full time Software Engineer</li>
+                <li>Develop web apps in Django & Angular</li>
+                <li>Work with AWS Services (EC2, RDS, S3, Lambda, etc...)</li>
+                <li>Work on MySQL server technology for database transactions</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2018 - Present</span>
@@ -150,7 +155,11 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Machine Learning Engineer Trainee</h3>
               <div class="subheading mb-3">Insight Workshop</div>
-              <p>Worked as a Machine Learning Engineer Trainee for solving data-related problems that arise in different web based applications using Django and Python.</p>
+              <ul>
+                <li>Worked as a part-time Machine Learning Engineer Trainee</li>
+                <li>Solved data related problems in web applications (in Python)</li>
+                <li>Worked with AWS Services related to compute and storage</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">December 2017 - April 2018</span>
@@ -161,10 +170,14 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Secretary at Robotics Club</h3>
               <div class="subheading mb-3">Kathmandu Engineering College</div>
-              <p>Working as an acting secretary in the Robotics Club of Kathmandu Engineering College. Have been involved in various robotics and embedded system projects and participated in multiple national and international robotics competitions such as Yantra, Robocon.</p>
+              <ul>
+                <li>Worked as an acting secretary of the club</li>
+                <li>Worked on projects involving Robotics, Embedded Systems and programming languages like C/C++, Arduino, AVR, etc</li>
+                <li>Participated in different national and international robotics competitions representing club and college.</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2015 - Present</span>
+              <span class="text-primary">June 2015 - July 2018</span>
             </div>
           </div>
 
@@ -172,7 +185,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Innovator</h3>
               <div class="subheading mb-3">National Innovation Center</div>
-              <p>Working as an Innovator for National Innovation Center led by Mr. Mahabir Pun. Been involved in the "Medical Drone" project for the enhancement of tele-medicine in Nepal. Occasionally work on the research for the software required in the automation for the drone.</p>
+              <ul>
+                <li>Involved in Medical Drone project initiated by Mr. Mahabir Pun</li>
+                <li>Worked as an Innovator in Software team for Medical Drone </li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2016 - September 2017</span>
@@ -240,16 +256,28 @@
               <i class="devicons devicons-git"></i>
             </li>
             <li class="list-inline-item">
+              <i class="devicons devicons-github_full"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-bitbucket"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-mysql"></i>
             </li>
             <li class="list-inline-item">
+              <i class="devicons devicons-aws"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
+              <i class="devicons devicons-angular"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-jquery"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-npm"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-html5"></i>
@@ -267,30 +295,45 @@
               <i class="devicons devicons-nginx"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-angular"></i>
+              <i class="devicons devicons-intellij"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-terminal"></i>
             </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">EXPERIENCED IN</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Data Science with Python</li>
+              Artificial Intelligence & Machine Learning</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Web Development with Django, Angular and Django REST Framework</li>
+              Python, Django</li>
+            <li>
+            <i class="fa-li fa fa-check"></i>
+            MySQL, AWS Aurora</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Artificial Intelligence and Machine Learning Concepts</li>
+              JS (ES5, ES6), jQuery, Angular 5</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Robotics and Embedded Systems</li>
+              AWS Services (EC2, RDS, S3, Lambda, etc)</li>
             <li>
            	  <i class="fa-li fa fa-check"></i>
-              UI/UX Design</li>
+              Linux, Nginx Server Setup</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Nginx Server Setup</li>
+              REST API & Services</li>
+            <li>
+            <i class="fa-li fa fa-check"></i>
+            IoT, Robotics & Embedded Systems</li>
+            <li>
+            <i class="fa-li fa fa-check"></i>
+            C/C++, AVR, Arduino</li>
+            <li>
+            <i class="fa-li fa fa-check"></i>
+            Agile Development</li>
           </ul>
         </div>
       </section>
@@ -298,8 +341,17 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
+          <ul>
+            <li>Computer Vision</li>
+            <li>Internet of Things</li>
+            <li>Data Science</li>
+            <li>Web Services</li>
+            <li>Cricket</li>
+            <li>Music</li>
+            <li>Traveling</li>
+          </ul>
           <p>Apart from being a machine learning enthusiast and a web developer, I enjoy most of my time in cricket. Whenever I get any chance to play indoor or outdoor cricket, I rush myself to it. I have also been an U-16 player for Kathmandu during my school days. I have participated in inter-college cricket competitions from KEC too.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and thriller genre movies and television shows. I spend a large amount of my free time exploring the latest technolgy advancements in the artificial intelligence and machine learning world.</p>
+          <p class="mb-0">When forced indoors, I follow a number of sci-fi and thriller genre movies and television shows. I spend a large amount of my free time exploring the latest technological advancements in computer science.</p>
         </div>
       </section>
 
