[ADD] AI certificate from Columbia

--- a/index.html
+++ b/index.html
@@ -361,6 +361,12 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://courses.edx.org/certificates/7625453d59ec40de98ed32b124e8ea98" target="_blank">
+                <b>Certification</b> - Artificial Intelligence Course - Columbia Micromasters Program
+              </a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
               <b>Winner</b> - Datathon (Data Analysis Competition) 2018 - Fusemachines Nepal</li>
             <li>
           	<li>
