[ADD] List icons

--- a/index.html
+++ b/index.html
@@ -341,14 +341,14 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <ul>
-            <li>Computer Vision</li>
-            <li>Internet of Things</li>
-            <li>Data Science</li>
-            <li>Web Services</li>
-            <li>Cricket</li>
-            <li>Music</li>
-            <li>Traveling</li>
+          <ul class="fa-ul">
+            <li><i class="fa-li fa fa-check-square"></i>Computer Vision</li>
+            <li><i class="fa-li fa fa-check-square"></i>Internet of Things</li>
+            <li><i class="fa-li fa fa-check-square"></i>Data Science</li>
+            <li><i class="fa-li fa fa-check-square"></i>Web Services</li>
+            <li><i class="fa-li fa fa-check-square"></i>Cricket</li>
+            <li><i class="fa-li fa fa-check-square"></i>Music</li>
+            <li><i class="fa-li fa fa-check-square"></i>Traveling</li>
           </ul>
           <p>Apart from being a machine learning enthusiast and a web developer, I enjoy most of my time in cricket. Whenever I get any chance to play indoor or outdoor cricket, I rush myself to it. I have also been an U-16 player for Kathmandu during my school days. I have participated in inter-college cricket competitions from KEC too.</p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and thriller genre movies and television shows. I spend a large amount of my free time exploring the latest technological advancements in computer science.</p>
