--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
               </a>
             </li>
           </ul>
+          <a href="/Ashish's Resume.pdf" download>Download my Resume</a>
         </div>
       </section>
 
