Mention Code for Nepal in awards section

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
               Fusemachines <b>AI Fellowship</b> - Columbia Micromasters Program 2018 - Artificial Intelligence</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              <b>Tech Diversity Scholarship</b> - Web Development with Python - IW Academy (Sponsored by Nepal Telecom)</li>
+              <b>Tech Diversity Scholarship (Code for Nepal)</b> - Web Development with Python - IW Academy (Sponsored by Nepal Telecom)</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <b>1<sup>st</sup>
