--- a/index.html
+++ b/index.html
@@ -361,10 +361,16 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
+          	<li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://courses.edx.org/certificates/28ee393717af421bbff826760007b87a" target="_blank">
+                <b>Certification</b> - CSMM.102x: Machine Learning (ML) - Columbia Micromasters Program
+              </a>
+            </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://courses.edx.org/certificates/7625453d59ec40de98ed32b124e8ea98" target="_blank">
-                <b>Certification</b> - Artificial Intelligence Course - Columbia Micromasters Program
+                <b>Certification</b> - CSMM.101x: Artificial Intelligence (AI) - Columbia Micromasters Program
               </a>
             </li>
             <li>
