Add link to past blogs (Electronic Axis):

--- a/index.html
+++ b/index.html
@@ -354,6 +354,8 @@
           </ul>
           <p>Apart from being a machine learning enthusiast and a web developer, I enjoy most of my time in cricket. Whenever I get any chance to play indoor or outdoor cricket, I rush myself to it. I have also been an U-16 player for Kathmandu during my school days. I have participated in inter-college cricket competitions from KEC too.</p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and thriller genre movies and television shows. I spend a large amount of my free time exploring the latest technological advancements in computer science.</p>
+          <br><br>
+          <a href="https://electronicaxis.blogspot.com" target="_blank">Checkout my past blogs (Electronic Axis)</a>
         </div>
       </section>
 
