--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <ul class="fa-ul">
+            <li><i class="fa-li fa fa-check-square"></i>Reinforcement Learning</li>
             <li><i class="fa-li fa fa-check-square"></i>Computer Vision</li>
             <li><i class="fa-li fa fa-check-square"></i>Internet of Things</li>
             <li><i class="fa-li fa fa-check-square"></i>Data Science</li>
