Change intro text

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="subheading mb-5">Chabahil · Kathmandu, NP · (986) 004-3739 ·
             <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
           </div>
-          <p class="mb-5">I am a college senior in Electronics & Communication Engineering at Kathmandu Engineering College and will be graduating in October 2018. I work as a Software Engineer at Insight Workshop, Kamalpokhari, Kathmandu. I am also the acting secretary of Robotics Club, Kathmandu Engineering College.</p>
+          <p class="mb-5">I am an undergraduate in Electronics & Communication Engineering from Kathmandu Engineering College. Currently, I work as a Software Engineer at Insight Workshop, Kathmandu.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://facebook.com/asheeshcric" target="_blank">
