--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <ul class="fa-ul">
-            <li><i class="fa-li fa fa-check-square"></i>Reinforcement Learning</li>
-            <li><i class="fa-li fa fa-check-square"></i>Computer Vision</li>
-            <li><i class="fa-li fa fa-check-square"></i>Internet of Things</li>
-            <li><i class="fa-li fa fa-check-square"></i>Data Science</li>
+            <li><i class="fa-li fa fa-check-square"></i>Reinforcement Learning and AI Algorithms</li>
+            <li><i class="fa-li fa fa-check-square"></i>Deep Learning</li>
+            <li><i class="fa-li fa fa-check-square"></i>Computer Vision with CNN</li>
+            <li><i class="fa-li fa fa-check-square"></i>Internet of Things (IoT)</li>
             <li><i class="fa-li fa fa-check-square"></i>Web Services</li>
             <li><i class="fa-li fa fa-check-square"></i>Cricket</li>
             <li><i class="fa-li fa fa-check-square"></i>Music</li>
