Edit my interest in computer vision

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
           <ul class="fa-ul">
             <li><i class="fa-li fa fa-check-square"></i>Reinforcement Learning and AI Algorithms</li>
             <li><i class="fa-li fa fa-check-square"></i>Deep Learning</li>
-            <li><i class="fa-li fa fa-check-square"></i>Computer Vision with CNN</li>
+            <li><i class="fa-li fa fa-check-square"></i>Computer Vision</li>
             <li><i class="fa-li fa fa-check-square"></i>Internet of Things (IoT)</li>
             <li><i class="fa-li fa fa-check-square"></i>Web Services</li>
             <li><i class="fa-li fa fa-check-square"></i>Cricket</li>
