Add Robotics to my interest list

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
             <li><i class="fa-li fa fa-check-square"></i>Reinforcement Learning and AI Algorithms</li>
             <li><i class="fa-li fa fa-check-square"></i>Deep Learning</li>
             <li><i class="fa-li fa fa-check-square"></i>Computer Vision</li>
+            <li><i class="fa-li fa fa-check-square"></i>Robotics</li>
             <li><i class="fa-li fa fa-check-square"></i>Internet of Things (IoT)</li>
             <li><i class="fa-li fa fa-check-square"></i>Web Services</li>
             <li><i class="fa-li fa fa-check-square"></i>Cricket</li>
