--- a/index.html
+++ b/index.html
@@ -365,6 +365,9 @@
         <div class="my-auto">
           <h2 class="mb-5">Awards &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              <b>Fusemachines AI Scholarship 2018</b> - Practical Hands on AI & Machine Learning</li>
           	<li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://courses.edx.org/certificates/28ee393717af421bbff826760007b87a" target="_blank">
