Update the title of the honor along with its formatting

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              <b>Fusemachines AI Scholarship 2018</b> - Practical Hands on AI & Machine Learning</li>
+              Fusemachines <b>AI Scholarship 2018</b> - Practical Hands on AI & Deep Learning</li>
           	<li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://courses.edx.org/certificates/28ee393717af421bbff826760007b87a" target="_blank">
