Add some lines to the summary

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="subheading mb-5">Chabahil · Kathmandu, NP · (986) 004-3739 ·
             <a href="mailto:ashiz2013@gmail.com">ashiz2013@gmail.com</a>
           </div>
-          <p class="mb-5">I am an undergraduate in Electronics & Communication Engineering from Kathmandu Engineering College. Currently, I work as a Software Engineer at Insight Workshop, Kathmandu.</p>
+          <p class="mb-5">I am an undergraduate in Electronics & Communication Engineering from Kathmandu Engineering College. Currently, I work as a Software Engineer at Insight Workshop, Kathmandu. I am someone who likes to mix life with technology, with a passion to instigate exceptional outcome(s). Manipulating an image to create results that can help in improving someone's health or programming efficient robots for transportation; these fields really excite me as a person.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://facebook.com/asheeshcric" target="_blank">
