--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               <div class="subheading mb-3">Insight Workshop</div>
               <ul>
                 <li>Implement AI & ML algorithms; finding data similarity and eliminating redundant data </li>
-                <li>Work on data issues found in common web applications</li>
+                <li>Work on data issues found in multi-tenant web applications</li>
                 <li>Develop web apps in Django & Angular</li>
                 <li>Work with AWS Services (EC2, RDS, S3, Lambda, etc...)</li>
                 <li>Work on MySQL server technology for database transactions</li>
