--- a/index.html
+++ b/index.html
@@ -314,7 +314,10 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Artificial Intelligence & Machine Learning</li>
+              Artificial Intelligence, Machine Learning & Deep Learning</li>
+              <li>
+              <i class="fa-li fa fa-check"></i>
+              Computer Vision and Reinforcement Learning</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Python, Django</li>
@@ -350,9 +353,8 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <ul class="fa-ul">
-            <li><i class="fa-li fa fa-check-square"></i>Reinforcement Learning and AI Algorithms</li>
+            <li><i class="fa-li fa fa-check-square"></i>Computer Vision & Reinforcement Learning</li>
             <li><i class="fa-li fa fa-check-square"></i>Deep Learning</li>
-            <li><i class="fa-li fa fa-check-square"></i>Computer Vision</li>
             <li><i class="fa-li fa fa-check-square"></i>Robotics</li>
             <li><i class="fa-li fa fa-check-square"></i>Internet of Things (IoT)</li>
             <li><i class="fa-li fa fa-check-square"></i>Web Services</li>
