Add Robotics certification to the achivements section

--- a/index.html
+++ b/index.html
@@ -378,6 +378,12 @@
               Fusemachines <b>AI Scholar 2018</b> - Practical Hands on AI & Deep Learning</li>
           	<li>
               <i class="fa-li fa fa-trophy text-warning"></i>
+              <a href="https://courses.edx.org/certificates/b794597772f8492a9fc98d5826f11879" target="_blank">
+                <b>Certification</b> - CSMM.103x: Robotics - Columbia Micromasters Program
+              </a>
+            </li>
+          	<li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
               <a href="https://courses.edx.org/certificates/28ee393717af421bbff826760007b87a" target="_blank">
                 <b>Certification</b> - CSMM.102x: Machine Learning (ML) - Columbia Micromasters Program
               </a>
